migrate blue-monitor to blue-monitor-core,blue-monitor-spring